public abstract class Composant {

    protected int posX;
    protected int posY;

}
