public abstract class Dynamique extends Composant {

    public abstract void deplacement(int direction);
}
